fix(blorktools): ui scrollbar

--- a/packages/blorktools/src/asset_debugger/debugger-scene/debugger-scene.css
+++ b/packages/blorktools/src/asset_debugger/debugger-scene/debugger-scene.css
@@ -1,4 +1,3 @@
-
 /* View layout with panel */
 #viewport {
     width: 100%;
@@ -33,7 +32,7 @@
     flex-shrink: 0;
 }
 
-.tab-container {
+.ui-tab-container {
    position: fixed;
    right: 20px;
    top: 70px;
@@ -87,6 +86,7 @@
    box-sizing: border-box;
    height: 100%;
    padding-right: 15px;
+   scrollbar-gutter: stable;
 }
 
 .tab-content.active {
